Fix sonar findings ... (#1987)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>